[package]
name = "makcu-bridge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chacha20poly1305 = "0.10.1"
makcu = {path = "../makcu"}
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
