[package]
name = "makcu-bridge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
futures-util = "0.3.31"
makcu = { path = "../makcu" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
